<resources>
    <string name="app_name">Stock</string>
    <string name="shr_hint_username">Username</string>
    <string name="shr_hint_password">Password</string>
    <string name="shr_hint_repeated_password">Repeat Password</string>
    <string name="login">Login</string>
    <string name="cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="app_icon">App Icon</string>
    <string name="search_title">Search</string>
    <string name="menu">Menu</string>
    <string name="log_out">Log out</string>
    <string name="search_keyword">Search ....</string>
    <string name="no_symbol_in_list">No Symbol in List</string>
    <string name="no_search_result">No search result</string>
</resources>